Updating index.html with more recent info

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 								<li><a href="#about">About</a></li>
 								<li><a href="#work">Work</a></li>
 								<li><a href="#skills">Skills & Projects</a></li>
-								<li><a href="#AandI">Awards & Involvement</a></li>
+								<li><a href="#CAandI">Certs, Awards, & Involvement</a></li>
 								<li><a href="#contact">Contact</a></li>
 							</ul>
 						</nav>
@@ -57,7 +57,8 @@
 									<br>
 									When I started at Forcepoint, I focused on helping customers with upgrading and implementing the Forcepoint product to fit their needs. This includes constant customer communication, remote and onsite sessions, and scripting solutions to help with day-to-day pain points the customer experiences.
 									<br>
-									As time went on, I shifted from being directly customer facing to the automation side, where I help our Cyber Assessments (similar to a environment health check) automatically grab data from a customer's environment. This sped up manually collecting data by 75%. The tool I developed consisted of Python and Powershell. My job involves coding, working with a customer's environment, and working extensively with other Forcepoint teams to assist in finding the location of the required data.
+									<br>
+									As time went on, I shifted from being directly customer facing to the automation side, where I help our Cyber Assessments (similar to an environment health check) automatically grab data from a customer's environment. This sped up manually collecting data by 75%. The tool I developed consists of Python and Powershell. My job involves coding, working with a customer's environment, and working extensively with other Forcepoint teams to assist in finding the location of the required data.
 								</p>
 								<p>
 									<b>Liberty Mutual - IT Analyst II</b>
@@ -95,6 +96,9 @@
 								<p>
 									<ul>
 										<li>Python / Java / C / C++</li>
+										<li>Amazon Web Services</li>
+										<li>System Administration</li>
+										<li>Powershell</li>
 										<li>Agile Methodologies</li>
 										<li>Data Structures and Algorithms</li>
 										<li>Linux / Unix</li>
@@ -102,8 +106,6 @@
 										<li>Object-Oriented Programming</li>
 										<li>SQL and Database Design</li>
 										<li>Cybersecurity</li>
-										<li>NLP</li>
-										<li>Amazon Web Services</li>
 									</ul>
 								</p>
 								<h2 class="major">Work-Related Projects</h2>
@@ -129,6 +131,14 @@
 											<p style="text-indent: 5em;">
 												My primary role on the team was to create automated tests that would run after changes were made. This helped to reassure us that if new functionality broke after any deploy, we could catch the bug as early as possible. Many tests were made using <a href=http://www.seleniumhq.org/ target=_blank>Selenium</a>. These tests helped to free up manual testing by the members of my team. On top of creating tests, I was also a point of contact with the external teams since I was usually the first to know if a bug was discovered by one of my tests.
 											</p>
+										<li>Automated Data Gathering</li>
+											<p style="text-indent: 5em;">
+												One of my responsibilities at Forcepoint was to help automate the collection of data for a Cyber Assessment (similar to an environment health check). Using Python and Powershell, I made a tool that can run in a customer environment that finds all the relevant Forcepoint servers (anywhere from 4 - 120 seen so far), detemine the OS and collect relevant data (whether using Powershell scripts, API calls, basic linux commads, etc.) and do analysis. It sped up the steps to do each server manually by 75%.
+											<p>
+										<li>Paramiko Shell Prototype</li>
+											<p style="text-indent: 5em;">
+												My job at Forcepoint was heavily focused on using PuTTY to SSH into appliances and do work there. The problem is it quite a process to log in as root (involving getting encrypted passwords and decrypting them multiple times). Using the Python paramiko library, I was able to make a prototype for a shell window that bypassed many of these steps and automated the password collecting and decrypting. The user could then navigate the appliance as root as if it were a regular PuTTY window.
+											<p>
 										
 									</ul>
 								</p>
@@ -147,6 +157,14 @@
 											<p style="text-indent: 5em;">
 												My first experience with mobile application development was iOS development. The first simple app I worked on for iOS was math related. The idea was to have a multiple choice, timed multiplication table quiz. A user would have a user-specified amount of time to answer as many multiplication questions as possible. The user earned coins for correct answers, and could use those coins to buy different background/button themes.
 											<p>
+										<li>Efficient Automatic Lights</li>
+											<p style="text-indent: 5em;">
+												Researched and implemented a prototype of an efficient automatic light system using an Arduino and LED light strips to simulate energy saving techniques
+											<p>
+										<li>3D Function Modeling</li>
+											<p style="text-indent: 5em;">
+												Collaborated with colleagues and a professor to create a program in Unity to graph a user-provided 3D function that is now used in Calculus 3 courses to assist with 3D graph visualization
+											<p>
 										<li>Risk Radar</li>
 											<p style="text-indent: 5em;">
 												For a work-related hackathon, my team and I created a website called Risk Radar. The website allowed a user to enter a city or zip code. The webpage would then display a map of the specified area, alongside information on the biggest insurance risks in that area and ways to avoid each risk. For example, in a place with high water damage, we would recommend occasional checking of pipes and the idea of investing in a smart leak detector. 
@@ -160,7 +178,7 @@
 							</article>
 							
 						<!-- Awards and Involvement -->
-							<article id="AandI">
+							<article id="CAandI">
 								<h2 class="major">Certifications</h2>
 								<p>
 									<ul>
