--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 							<article id="work">
 								<h2 class="major">Work</h2>
 								<p>
-									<b>Forcepoint LLC - Cyber Engineer I/II</b>
+									<b>Forcepoint LLC - Cyber Engineer I/II/III</b>
 									<br>
 									October 2017 - Present
 									<br>
