--- a/index.html
+++ b/index.html
@@ -51,14 +51,24 @@
 							<article id="work">
 								<h2 class="major">Work</h2>
 								<p>
+									<b>American Family Insurance - Business Design Speicalist</b>
+									<br>
+									May 2021 - Present
+									<br>
+									Backend developer and DevOps engineer for the technical side of the department. I am in charge of architecting and implementing ventures we puruse into AWS using IaC for easy DR and reusable resources for future ventures. I'm also involved in our internship program, ensuring I am available to answer questions and pair program to help both of us learn. I was the primary mentor for two of our interns for AWS knowledge sharing. Inbetween ventures, I spend my time researching emerging technologies to enhance my domain knowledge and apply it to future ventures.  
+									<br>
+									<br>
+									Since this department puruses business ventures, I've been lucky to also been a part of ideation sessions about choosing business categories to pursue, and trying to shape the feasibility of investing in them. This has taught me quite a bit about all the nuances that come along with starting a brand new company, such as financial modeling and unit economics, go-to-market strategies, and validation testing.
+								</p>
+								<p>
 									<b>Forcepoint LLC - Cyber Engineer I/II/III</b>
 									<br>
-									October 2017 - Present
+									October 2017 - April 2021
 									<br>
 									When I started at Forcepoint, I focused on helping customers with upgrading and implementing the Forcepoint product to fit their needs. This includes constant customer communication, remote and onsite sessions, and scripting solutions to help with day-to-day pain points the customer experiences.
 									<br>
 									<br>
-									As time went on, I shifted from being directly customer facing to the automation side, where I help our Cyber Assessments (similar to an environment health check) automatically grab data from a customer's environment. This sped up manually collecting data by 75%. The tool I developed consists of Python and Powershell. My job involves coding, working with a customer's environment, and working extensively with other Forcepoint teams to assist in finding the location of the required data.
+									As time went on, I shifted from being directly customer facing to the automation side, where I help our Cyber Assessments (similar to an environment health check) automatically grab data from a customer's environment. This sped up manually collecting data by 80%. The tool I developed consists of Python and Powershell. My job involves coding, working with a customer's environment, and working extensively with other Forcepoint teams to assist in finding the location of the required data.
 								</p>
 								<p>
 									<b>Liberty Mutual - IT Analyst II</b>
