--- a/index.html
+++ b/index.html
@@ -51,14 +51,14 @@
 							<article id="work">
 								<h2 class="major">Work</h2>
 								<p>
-									<b>American Family Insurance - Business Design Speicalist</b>
+									<b>American Family Insurance - Business Design Specialist</b>
 									<br>
 									May 2021 - Present
 									<br>
-									Backend developer and DevOps engineer for the technical side of the department. I am in charge of architecting and implementing ventures we puruse into AWS using IaC for easy DR and reusable resources for future ventures. I'm also involved in our internship program, ensuring I am available to answer questions and pair program to help both of us learn. I was the primary mentor for two of our interns for AWS knowledge sharing. Inbetween ventures, I spend my time researching emerging technologies to enhance my domain knowledge and apply it to future ventures.  
+									Backend developer and DevOps engineer for the technical side of the department. I am in charge of architecting and implementing ventures we pursue into AWS using IaC for easy DR and reusable resources for future ventures. I'm also involved in our internship program, ensuring I am available to answer questions and pair program to help both of us learn. I was the primary mentor for two of our interns for AWS knowledge sharing. In between ventures, I spend my time researching emerging technologies to enhance my domain knowledge and apply it to future ventures.  
 									<br>
 									<br>
-									Since this department puruses business ventures, I've been lucky to also been a part of ideation sessions about choosing business categories to pursue, and trying to shape the feasibility of investing in them. This has taught me quite a bit about all the nuances that come along with starting a brand new company, such as financial modeling and unit economics, go-to-market strategies, and validation testing.
+									Since this department puruses business ventures, I've been lucky to also have been a part of ideation sessions about choosing business categories to pursue, and trying to shape the feasibility of investing in them. This has taught me quite a bit about all the nuances that come along with starting a brand new company, such as financial modeling and unit economics, go-to-market strategies, and validation testing.
 								</p>
 								<p>
 									<b>Forcepoint LLC - Cyber Engineer I/II/III</b>
