Updating with latest experience

--- a/index.html
+++ b/index.html
@@ -51,9 +51,42 @@
 							<article id="work">
 								<h2 class="major">Work</h2>
 								<p>
+									<b>IXIS Digital, LLC - AWS Engineer</b>
+									<br>
+									February 2023 - Present
+									<br>
+									Review and improve existing AWS infrastructure in order to be more efficient, secure, and save costs for a
+									web application. Emphasis on enforcing infrastructure as code using CloudFormation and the Serverless
+									Framework.
+									<br>
+									<br>
+									Research, test, and integrate third-party solutions into AWS, such as Airbyte for data ingestion.
+									<br>
+									<br>
+									Maintain and update postgres databases using tools like alembic while implementing new features to the
+									web app.
+								</p>
+								<p>
+									<b>Amazon - Software Engineer</b>
+									<br>
+									April 2022 - February 2023
+									<br>
+									Led region build project for deploying Account Management Security portion of AWS GuardDuty to new
+									production and gamma regions with little documentation or guidance. Created an extensive guide for future
+									region builds and automated many tedious, manual tasks.
+									<br>
+									<br>
+									Researched knowledge gaps team was facing, documented, and demoed to wider team
+									<br>
+									<br>
+									On-call with various customer impacting tickets that were explored, troubleshot, and resolved in a timely
+									manner.
+									<br>
+								</p>
+								<p>
 									<b>American Family Insurance - Business Design Specialist</b>
 									<br>
-									May 2021 - Present
+									May 2021 - April 2022
 									<br>
 									Backend developer and DevOps engineer for the technical side of the department. I am in charge of architecting and implementing ventures we pursue into AWS using IaC for easy DR and reusable resources for future ventures. I'm also involved in our internship program, ensuring I am available to answer questions and pair program to help both of us learn. I was the primary mentor for two of our interns for AWS knowledge sharing. In between ventures, I spend my time researching emerging technologies to enhance my domain knowledge and apply it to future ventures.  
 									<br>
